@@ -2,6 +2,7 @@ Revision history for Ham-DXCC-Lookup
 
 0.02
 	Renamed cty_dat_full.csv to cty.csv - it's more consistent
+	Allow running from the command line
 
 0.01	Fri Jun 13 16:14:59 EDT 2025
         First draft
